--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,255 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+body {
+  height: 100%;
+  width: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+#root{
+  width: 100%;
+  height: 98vh;
+  background: #fafafa;
+}
+.form-header{
+  background: white;
+  padding: 10px;
+  box-shadow: -2px 2px 10px -2px #808080;
+
+}
+.Medium{
+  border-left: 4px solid orange;
+  margin-left: 4px;
+}
+.High{
+  border-left: 4px solid red;
+  margin-left: 4px;
+}
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  monospace;
+}
+.container{
+  height: 80%;
+  width: 50% !important;
+  padding: 30px;
+  position: relative;
+}
+.container .btn-primary{
+  text-align: center;
+}
+.table{
+  width: 100% !important;
+
+  box-shadow: -2px 2px 10px -2px #808080;
+  background: white;
+  margin: 20px auto;
+
+}
+tr{
+  width: 100%;
+  padding: 10px;
+  border-left: 4px solid darkgray;
+  margin-left: 4px;
+}
+td{
+  width: 20%;
+  padding: 5px !important;
+}
+a.btn{
+  position: absolute !important;
+  padding: 4px !important;
+  width: 40px !important;
+  min-width: 30px !important;
+  right: 30px;
+  top: 10px;
+}
+ul{
+  list-style: none;
+  border: 1px solid #e8e8e8;
+}
+.form-container{
+  width: 100%;
+  height: 100%;
+}
+form{
+  height: 85%;
+  width: 96% !important;
+  box-shadow: -2px 2px 10px -2px #808080;
+  background: white;
+  margin: 20px auto;
+  border: 1px solid #e8e8e8;
+  padding: 10px;
+}
+
+.form-group{
+  display: block !important;
+  padding: 5px !important;
+  width: 80%;
+  margin: 0 auto !important;
+}
+.submitBtn{
+  margin-top: 20px;
+  text-align: center;
+}
+.actionCol{
+  width: 40px;
+}
+.form-check-input{
+  margin: 0 10px !important;
+  top: 10px;
+}
+.titleCol input{
+  width: 80%;
+  height: 30px;
+  border: none;
+  border-bottom: 1px solid #e8e8e8;
+  border-radius: 0;
+}
+.actionIcon{
+  font-size: 16px;
+}
+.MuiTextField-root, .MuiInputBase-root{
+  width: 100%;
+  margin: 0 auto;
+  padding: 10px;
+  display: inline-block;
+}
+Button {
+  margin-top: 20px;
+}
+.districtData{
+  display: inline-block;
+  margin: 5px;
+
+  /*width: 30%;*/
+  /*height: 20%;*/
+  background: white;
+  box-shadow: -2px 2px 10px -2px #808080;
+}
+.districtData header{
+  margin-bottom: 20px;
+  padding: 6px;
+  font-size:18px;
+  color: black;
+  border-bottom: 1px solid #e8e8e8;
+}
+footer{
+  color: black;
+  background: white;
+  height: 18px;
+  font-size:16px;
+  padding: 10px;
+  text-align: center;
+  border-top: 1px solid #e8e8e8;
+}
+header{
+  color: black;
+  background: white;
+  height: 25px;
+  font-size:20px;
+  padding: 10px;
+  border-bottom: 1px solid #e8e8e8;
+}
+.districtData div{
+  padding: 6px 8px;
+  display: inline-block;
+  /*width: 80px;*/
+  margin: 5px;
+}
+.districtData div label{
+  display: block;
+}
+.stateData label{
+  font-weight: 600;
+}
+.districtData div span{
+  display: block;
+  position: relative;
+  left: 40%;
+}
+.deceased{
+  color:grey;
+}
+.recovered{
+  color:green;
+}
+.active{
+  color:red;
+}
+.confirmed{
+  color:blue;
+}
+.Default{
+  height: 100%;
+  color: grey;
+}
+.Light{
+  height: 100%;
+  color: gray;
+}
+tr{
+  color: black;
+}
+h3{
+  margin: 0;
+}
+section{
+  height: calc(100% - 140px);
+  background: white;
+  padding: 16px;
+  margin: 15px;
+}
+.stateData{
+  margin-bottom: 10px;
+  font-size:18px;
+}
+.Orange{
+  height: 100%;
+  color: orange;
+}
+.Red{
+  height: 100%;
+  color: #ff073a;
+}
+label{
+  font-weight: 500;
+}
+.Green{
+  height: 100%;
+  color: #28a745;
+}
+.Red tbody{
+background: rgba(255,7,58,.12549)
+}
+.Green tr{
+  border-bottom: 1px solid   #ff073a;;
+}
+.Green tbody{
+  background: rgba(40,167,69,.12549)
+}
+.Red tr{
+  border-bottom: 1px solid   #ff073a;;
+}
+.Orange{
+  color:#ff9933
+}
+.Orange tr{
+  border-bottom: 1px solid #ff9933;
+}
+.Orange tbody{
+  background: #ffd14f;
+}
+thead td{
+  font-weight: 500;
+}
+.noData{
+  text-align: center;
+  padding: 20px !important;
+  color: #808080;
+}
+
